src/main/java/com/example/autorepairshop/error/ClientAlreadyExistException.java
package com.example.autorepairshop.error;

public class ClientAlreadyExistException extends RuntimeException {
    public ClientAlreadyExistException(String message) {
        super(message);
    }
}
